--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -30,7 +30,7 @@
      <x>0</x>
      <y>0</y>
      <width>950</width>
-     <height>29</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -68,7 +68,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget">
    <property name="windowTitle">
-    <string>Re&amp;gisters</string>
+    <string>Registers</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -250,7 +250,7 @@
     </size>
    </property>
    <property name="windowTitle">
-    <string>&amp;Memory disassembly</string>
+    <string>Memory disassembly</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
@@ -278,6 +278,7 @@
    <addaction name="actionRun"/>
    <addaction name="actionStep"/>
    <addaction name="actionStop"/>
+   <addaction name="actionDebug_stats"/>
    <addaction name="actionAbout"/>
   </widget>
   <action name="actionAbout">
@@ -313,6 +314,11 @@
   <action name="actionStep">
    <property name="text">
     <string>Ste&amp;p</string>
+   </property>
+  </action>
+  <action name="actionDebug_stats">
+   <property name="text">
+    <string>Debug stats</string>
    </property>
   </action>
  </widget>
@@ -430,6 +436,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionDebug_stats</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>print_debug_stats()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>343</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>loadRom()</slot>
@@ -439,5 +461,6 @@
   <slot>stop()</slot>
   <slot>reset()</slot>
   <slot>step()</slot>
+  <slot>print_debug_stats()</slot>
  </slots>
 </ui>
