More work trying to get zexall to run....

--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -30,7 +30,7 @@
      <x>0</x>
      <y>0</y>
      <width>950</width>
-     <height>21</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -68,29 +68,15 @@
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget">
    <property name="windowTitle">
-    <string>Registers</string>
+    <string>Re&amp;gisters</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="4" column="1">
-      <widget class="QLabel" name="sp_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="ix_label">
-       <property name="text">
-        <string>IX</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLabel" name="ix_value">
+     <item row="8" column="1">
+      <widget class="QLabel" name="a_value">
        <property name="text">
         <string>0</string>
        </property>
@@ -103,27 +89,6 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
-      <widget class="QLabel" name="d_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="1">
-      <widget class="QLabel" name="a_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <widget class="QLabel" name="b_label">
-       <property name="text">
-        <string>B</string>
-       </property>
-      </widget>
-     </item>
      <item row="10" column="1">
       <widget class="QLabel" name="c_value">
        <property name="text">
@@ -131,43 +96,57 @@
        </property>
       </widget>
      </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="sp_label">
+       <property name="text">
+        <string>SP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLabel" name="ix_value">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1">
+      <widget class="QLabel" name="d_value">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="iy_label">
+       <property name="text">
+        <string>IY</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QLabel" name="hl_value">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="hl_label">
+       <property name="text">
+        <string>HL</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="ix_label">
+       <property name="text">
+        <string>IX</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="pc_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="0">
-      <widget class="QLabel" name="e_label">
-       <property name="text">
-        <string>E</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="1">
-      <widget class="QLabel" name="e_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="0">
-      <widget class="QLabel" name="f_label">
-       <property name="text">
-        <string>F</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="1">
-      <widget class="QLabel" name="b_value">
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="1">
-      <widget class="QLabel" name="f_value">
        <property name="text">
         <string>0</string>
        </property>
@@ -180,22 +159,50 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="iy_label">
+     <item row="0" column="0">
+      <widget class="QLabel" name="pc_label">
        <property name="text">
-        <string>IY</string>
+        <string>PC</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="hl_label">
+     <item row="9" column="1">
+      <widget class="QLabel" name="b_value">
        <property name="text">
-        <string>HL</string>
+        <string>0</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="hl_value">
+     <item row="4" column="1">
+      <widget class="QLabel" name="sp_value">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="b_label">
+       <property name="text">
+        <string>B</string>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="0">
+      <widget class="QLabel" name="f_label">
+       <property name="text">
+        <string>F</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1">
+      <widget class="QLabel" name="e_value">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QLabel" name="iy_value">
        <property name="text">
         <string>0</string>
        </property>
@@ -208,34 +215,17 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="sp_label">
+     <item row="12" column="0">
+      <widget class="QLabel" name="e_label">
        <property name="text">
-        <string>SP</string>
+        <string>E</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QLabel" name="iy_value">
+     <item row="13" column="1">
+      <widget class="QLabel" name="f_value">
        <property name="text">
         <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="pc_label">
-       <property name="text">
-        <string>PC</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QSpinBox" name="spinBox">
-       <property name="accelerated">
-        <bool>true</bool>
-       </property>
-       <property name="displayIntegerBase">
-        <number>16</number>
        </property>
       </widget>
      </item>
@@ -250,7 +240,7 @@
     </size>
    </property>
    <property name="windowTitle">
-    <string>Memory disassembly</string>
+    <string>&amp;Memory disassembly</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
