--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -297,26 +297,46 @@
    <addaction name="actionAbout"/>
   </widget>
   <action name="actionAbout">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/toolbar/help-about.svg</normaloff>:/toolbar/help-about.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;About</string>
    </property>
   </action>
   <action name="actionQuit">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/toolbar/application-exit.svg</normaloff>:/toolbar/application-exit.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
   </action>
   <action name="actionLoad_ROM">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/toolbar/document-open.svg</normaloff>:/toolbar/document-open.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;Load ROM</string>
    </property>
   </action>
   <action name="actionRun">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/toolbar/media-playback-start.svg</normaloff>:/toolbar/media-playback-start.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;Run</string>
    </property>
   </action>
   <action name="actionStop">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/toolbar/media-playback-stop.svg</normaloff>:/toolbar/media-playback-stop.svg</iconset>
+   </property>
    <property name="text">
     <string>&amp;Pause</string>
    </property>
@@ -349,11 +369,13 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Scroll memory with PC</string>
+    <string>&amp;Scroll memory with PC</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="app.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionAbout</sender>
